update WAMP to LAMP

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     </h1>
                     <p>
                         I'm Backend Developer with 1 year of hands-on experience
-                        in the WAMP stack, object-oriented
+                        in the LAMP stack, object-oriented
                         programming, Laravel, and MySQL. Skilled in designing
                         robust APIs, debugging production issues, and
                         building scalable, maintainable backend solutions.
