--- a/index.html
+++ b/index.html
@@ -518,7 +518,7 @@
                         </div>
                         <div class="blog">
                             <a
-                                href="#">
+                                href="https://medium.com/@amirnagy886/understanding-boyce-codd-normal-form-bcnf-d92e54cfaf9d">
                                 <img src="img/database.webp" alt>
                                 <div class="blog-text">
                                     <h4>
